--- a/src/sass/_theme-switcher.scss
+++ b/src/sass/_theme-switcher.scss
@@ -1,47 +1,3 @@
-:root {
-  --timing-function: cubic-bezier(0.4, 0, 0.2, 1);
-  --fav-black-color: #4f4f4f;
-  --fav-white-color: #e8e8e8;
-  --accent-color: #7cafd8;
-}
-
-*,
-*::before,
-*::after {
-  box-sizing: border-box;
-}
-
-body {
-  margin: 0;
-  font-family: "Lato", sans-serif;
-  font-style: normal;
-  font-weight: 100;
-  color: var(--fav-black-color);
-}
-
-li {
-  list-style: none;
-}
-
-.weather-icon {
-  display: inline-block;
-  width: 10em;
-  height: 10em;
-  stroke-width: 0;
-  stroke: currentColor;
-  fill: currentColor;
-}
-
-body.light-theme {
-  background-color: var(--fav-white-color);
-  color: var(--fav-black-color);
-}
-
-body.dark-theme {
-  background-color: var(--fav-black-color);
-  color: var(--fav-white-color);
-}
-
 .toolbar {
   display: flex;
   justify-content: flex-end;
@@ -117,9 +73,10 @@ body.dark-theme {
 .theme-switch__toggle:checked + .theme-switch__track {
   background-color: var(--fav-white-color);
   transition: all 250ms var(--timing-function);
+  // background-color: #d3d3d4;
 }
 
-.theme-switch__toggle:checked ~ .theme-switch__marker {
+.theme-switch__toggle:checked ~ .theme-switch__marker{
   background-color: var(--accent-color);
   transform: translateX(35px);
   transition: all 250ms var(--timing-function);
@@ -128,4 +85,4 @@ body.dark-theme {
 .theme-switch__toggle:focus + .theme-switch__track,
 .theme-switch__toggle:active + .theme-switch__track {
   box-shadow: 0 0 0 3px var(--accent-color);
-}/*# sourceMappingURL=main.css.map */
+}
