--- a/src/sass/_theme-switcher.scss
+++ b/src/sass/_theme-switcher.scss
@@ -9,7 +9,7 @@
   align-items: center;
 }
 
-.theme-switch__icon {
+.theme-switch__icon, .tool-icon {
   color: currentColor;
   stroke-width: 0;
   fill: currentColor;
