--- a/src/sass/_components.scss
+++ b/src/sass/_components.scss
@@ -23,21 +23,6 @@
   align-items: center;
   justify-content: space-between;
   position: relative;
-
-  
-  input {
-    width: 80%;
-    font-size: 24px;
-    font-weight: 400;
-    text-transform: uppercase;
-    padding-left: 32px;
-  }
-  
-  input::placeholder {
-    font-size: 20px;
-    font-weight: 400;
-    text-transform: capitalize;
-  }
   
   .tool-icon {
     margin: 0;
@@ -46,7 +31,28 @@
   }
 }
 
-button {
+.search-form {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  width: 100%;
+}
+
+.search-input {
+  width: 80%;
+  font-size: 24px;
+  font-weight: 400;
+  text-transform: uppercase;
+  padding-left: 32px;
+}
+
+.search-input::placeholder {
+  font-size: 20px;
+  font-weight: 400;
+  text-transform: capitalize;
+}
+
+.search-button {
   cursor: pointer;
   width: 50px;
   height: 50px;
@@ -58,12 +64,21 @@ button {
   transition: 250ms var(--timing-function);
 }
 
-button:hover {
+.search-button:hover {
   background-color: var(--accent-color);
   color: #fff;
 }
 
+.error.is-hidden {
+  display: none;
+  transition: 2500ms ease;
+}
 
+.error {
+  display: block;
+  color: tomato;
+  transition: 2500ms ease;
+}
 
 
 .weather {
